第三个版本，测试版本，删除了678的控制，只要检测到报警就发送信息

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
     "serial.h": "c",
     "stm32f10x_tim.h": "c",
     "stm32f10x_rcc.h": "c",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "stm32f10x_gpio.h": "c",
+    "adc.h": "c"
   }
 }
