第九个版本(数字口MQ2)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,8 @@
     "stm32f10x_rcc.h": "c",
     "stdint.h": "c",
     "stm32f10x_gpio.h": "c",
-    "adc.h": "c"
+    "adc.h": "c",
+    "stm32f10x_rtc.h": "c",
+    "cmath": "c"
   }
 }
