第11个版本（增加了注释，MQ2数字口懂，模拟口和RTC还有疑惑）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,10 @@
     "stm32f10x_gpio.h": "c",
     "adc.h": "c",
     "stm32f10x_rtc.h": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "math.h": "c",
+    "type_traits": "c",
+    "utility": "c",
+    "limits": "c"
   }
 }
